@@ -1,0 +1,7 @@
+package MyVocabulary::MissingRole;
+
+sub vocabulary {
+  'https://some/uri' => 'draft2020-12',
+}
+
+1;
