@@ -1,0 +1,7 @@
+package MyVocabulary::MissingSub;
+use Moo;
+with 'JSON::Schema::Modern::Vocabulary';
+
+# missing vocabulary, keywords
+
+1;
